<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.gyvex</groupId>
    <artifactId>ezafk</artifactId>
    <version>3.0.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <adventure.scope>provided</adventure.scope>
        <maven.compiler.release>17</maven.compiler.release>
        <paper.version>26.1.2.build.57-stable</paper.version>
        <bstats.version>3.1.0</bstats.version>
        <worldguard.version>7.0.13</worldguard.version>
        <maven.compiler.plugin.version>3.15.0</maven.compiler.plugin.version>
        <maven.shade.plugin.version>3.6.2</maven.shade.plugin.version>
        <jaloquent.version>1.2.1</jaloquent.version>
        <mockbukkit.version>dev-6d384d3</mockbukkit.version>
        <!-- GitHub repository used for publishing to GitHub Packages -->
        <github.repository>ez-plugins/ezafk</github.repository>
    </properties>

    <repositories>
        <repository>
            <id>papermc-repo</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>central</id>
            <name>Maven Central</name>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <!-- JitPack -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>maxhenkel-public</id>
            <url>https://maven.maxhenkel.de/repository/public</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${paper.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Note: `paper-api` is declared with `provided` scope above; do not duplicate it here -->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>${bstats.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>${worldguard.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Kyori Adventure API for MiniMessage support -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-api</artifactId>
            <version>4.26.1</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-key</artifactId>
            <version>4.26.1</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>4.16.0</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-serializer-legacy</artifactId>
            <version>4.26.1</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>examination-api</artifactId>
            <version>1.3.0</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>examination-string</artifactId>
            <version>1.3.0</version>
        </dependency>
        <dependency>
            <groupId>javazoom</groupId>
            <artifactId>jlayer</artifactId>
            <version>1.0.1</version>
        </dependency>
        <dependency>
            <groupId>de.maxhenkel.voicechat</groupId>
            <artifactId>voicechat-api</artifactId>
            <version>2.6.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.NEZNAMY</groupId>
            <artifactId>TAB-API</artifactId>
            <version>5.5.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.EzFramework</groupId>
            <artifactId>Jaloquent</artifactId>
            <version>${jaloquent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.EzFramework</groupId>
            <artifactId>jaker</artifactId>
            <version>1.0.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.EzFramework.Jaker</groupId>
            <artifactId>jaker-data-en-US</artifactId>
            <version>1.0.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
        <!-- MockBukkit for plugin tests (mock server environment) -->
        <dependency>
            <groupId>org.mockbukkit.mockbukkit</groupId>
            <artifactId>mockbukkit-v26.1.2</artifactId>
            <version>${mockbukkit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.5.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>plugin.yml</include>
                    <include>config.yml</include>
                    <include>gui.yml</include>
                    <include>mysql.yml</include>
                    <include>zones.yml</include>
                    <include>messages/**</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <includes>
                    <include>mp3/ezafk-sound.mp3</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <fork>true</fork>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven.shade.plugin.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <artifactSet>
                                <includes>
                                    <include>org.bstats:bstats-bukkit</include>
                                    <include>org.bstats:bstats-base</include>
                                    <include>net.kyori:adventure-api</include>
                                    <include>net.kyori:adventure-key</include>
                                    <include>net.kyori:adventure-text-minimessage</include>
                                    <include>net.kyori:adventure-text-serializer-legacy</include>
                                    <include>net.kyori:examination-api</include>
                                    <include>net.kyori:examination-string</include>
                                    <include>javazoom:jlayer</include>
                                    <include>com.github.EzFramework:Jaloquent</include>
                                    <include>com.github.EzFramework:JavaQueryBuilder</include>
                                </includes>
                            </artifactSet>
                            <relocations>
                                <relocation>
                                    <pattern>org.bstats</pattern>
                                    <shadedPattern>com.gyvex.ezafk.bstats</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>net.kyori</pattern>
                                    <shadedPattern>com.gyvex.ezafk.libs.net.kyori</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>javazoom</pattern>
                                    <shadedPattern>com.gyvex.ezafk.libs.javazoom</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.github.ezframework</pattern>
                                    <shadedPattern>com.gyvex.ezafk.libs.ezframework</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.5</version>
                <configuration>
                    <useModulePath>false</useModulePath>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/${github.repository}</url>
        </repository>
    </distributionManagement>
</project>
